Redesigned the navigation bar. It is now fully responsive on window resizing. This was made using Bootstraps CSS classes. There are still a few issues to fix, like the background color of active dropdowns while the navbar is expanded in mobile mode. Another issue is the alignment of buttons in expanded navbar, also in mobile mode. However, all functionality has been kept. The next step is to fix mentioned issues and then redesign the footer probably by using the Bootstrap grid system.

--- a/RudesWebapp/wwwroot/css/site.css
+++ b/RudesWebapp/wwwroot/css/site.css
@@ -63,7 +63,7 @@ html {
 body {
     /* Margin bottom by footer height */
     margin-bottom: 60px;
-    padding-top: 60px;
+    padding-top: 70px;
 }
 
 .footer {
@@ -75,17 +75,17 @@ body {
 }
 
 .my-navbar-button {
-    width: 150px;
+    width: 180px;
     text-align: center;
-    border: 2px solid black;
-    border-radius: 4px;
-    box-shadow: rgb(100, 96, 96) 2px 2px;
 }
 
     .my-navbar-button:hover {
         background-color: lightgrey;
-        box-shadow: 5px 5px grey;
     }
+
+nav li a {
+    font-size: 1.2em;
+}
 
 nav a {
     color: black;
